Fix overflow bug with filenames including spaces

--- a/app/components/request_form/request_form.css
+++ b/app/components/request_form/request_form.css
@@ -41,6 +41,7 @@
   width: 60%;
   overflow: hidden;
   text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .RequestForm-removeListItemButton {
